secondfile/objects/BidMigration__c.object
<CustomObject>
    <description>This Object is used to migrate Bid opportunities to Atom portal</description>
    <fields>
        <fullName>Cronjobid__c</fullName>
        <label>Cron Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal Reg Approved</fullName>
                </value>
                <value>
                    <fullName>Deal Reg Requested</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Pricing Schuduled Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SavePoint__c</fullName>
        <label>SavePoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchuduleJobAt__c</fullName>
        <label>SchuduleJobAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SpAccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BidMigration</relationshipLabel>
        <relationshipName>BidMigration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BidMigration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SpAccountName__c</columns>
        <columns>IsProcessed__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BidMigration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>